2009-01-03 nordfalk
 * Standard input and standard output can not be used (using file name - )
 * All commands takes optional arguments -align and -alignPardef 
      with optional 2 numbers for aligment element after <e> and aligment of <r> element
 * File names are reported (to stderr) when reading and writing files


2008-12-30 nordfalk

	* Added ChangeLog
	* Added CLI tests for crossdict  dic-reader  dix2tiny  dix2trie kind_of_test  merge-morph  reverse-bil  sort
	* Rmoved apertium-crossdics - didnt work and its a subcommand to apertium-dixtools
