@@ -91,77 +91,5 @@ public class DicFormatE1LineAligned extends AbstractDictTool {
     public void printXML(String fileName, String encoding) {
         dic.setFileName(fileName);
         dic.printXML(fileName, opt);
-/*
-        BufferedOutputStream bos;
-        FileOutputStream fos;
-        OutputStreamWriter dos;
-       
-        dic.setFileName(fileName);
-        try {
-            fos = new FileOutputStream(fileName);
-            bos = new BufferedOutputStream(fos);
-            dos = new OutputStreamWriter(bos, encoding);
-            dos.append("<?xml version=\"1.0\" encoding=\"" + encoding + "\"?>\n");
-            dos.append("<!--\n\tDictionary:\n");
-            if (dic.getSections() != null) {
-                if (dic.isBil()) {
-                    dos.append("\tBilingual dictionary: " + dic.getLeftLanguage() + "-" + dic.getRightLanguage() + "\n");
-                }
-                dos.append("\tSections: " + dic.getSections().size() + "\n");
-                int ne = 0;
-                for (SectionElement section : dic.getSections()) {
-                    ne += section.getEElements().size();
-                }
-                dos.append("\tEntries: " + ne);
-            }
-
-            if (dic.getSdefs() != null) {
-                dos.append("\n\tSdefs: " + dic.getSdefs().getSdefsElements().size() + "\n");
-            }
-            if (dic.getPardefsElement() != null) {
-                dos.append("\tParadigms: " + dic.getPardefsElement().getPardefElements().size() + "\n");
-            }
-
-            if (dic.getComments() != null) {
-                dos.append(dic.getComments());
-            }
-            dos.append("-->\n");
-            dos.append("<dictionary>\n");
-            if (dic.getAlphabet() != null) {
-                dic.getAlphabet().printXML(dos, opt);
-            }
-            if (dic.getSdefs() != null) {
-                dic.getSdefs().printXML(dos, opt);
-            }
-            if (dic.getPardefsElement() != null) {
-                dic.getPardefsElement().printXML(dos, opt);
-            }
-            if (dic.getSections() != null) {
-                for (SectionElement s : dic.getSections()) {
-                    String attributes = "";
-                    if (s.getID() != null) {
-                        attributes += " id=\"" + s.getID() + "\"";
-                    }
-                    if (s.getType() != null) {
-                        attributes += " type=\"" + s.getType() + "\"";
-                    }
-                    dos.append("  <section " + attributes + ">\n");
-                    for (EElement e : s.getEElements()) {
-                        e.printXML1LineAligned(dos, opt.alignP, opt.alignR);
-                    }
-                    dos.append("  </section>\n");
-                }
-            }
-            dos.append("</dictionary>\n");
-            fos = null;
-            bos = null;
-            dos.close();
-            dos = null;
-        } catch (IOException e) {
-            e.printStackTrace();
-        } catch (Exception eg) {
-            eg.printStackTrace();
-        }
- */
     }
 }
