@@ -1,3 +1,7 @@
+2009-01-04 nordfalk
+
+* Deleted 'gather' function
+
 2009-01-03 nordfalk
  * Standard input and standard output can not be used (using file name - )
  * All commands takes optional arguments -align and -alignPardef 
@@ -6,6 +10,7 @@
 
 
 2008-12-30 nordfalk
+
 
 	* Added ChangeLog
 	* Added CLI tests for crossdict  dic-reader  dix2tiny  dix2trie kind_of_test  merge-morph  reverse-bil  sort
